@@ -8,12 +8,15 @@ import io.lemonjuice.flandre_bot.console.ConsoleCommandInit;
 import io.lemonjuice.flandre_bot.resources.ResourceInit;
 import io.lemonjuice.flandre_bot.scheduled.ScheduledTaskManager;
 import io.lemonjuice.flandre_bot.utils.NicknameManager;
+import io.lemonjuice.flandre_bot_framework.console.BotConsole;
 import io.lemonjuice.flandre_bot_framework.event.BotEventBus;
 import io.lemonjuice.flandre_bot_framework.event.annotation.EventSubscriber;
 import io.lemonjuice.flandre_bot_framework.event.meta.BotInitEvent;
 import io.lemonjuice.flandre_bot_framework.event.meta.BotStopEvent;
+import lombok.extern.log4j.Log4j2;
 
 @EventSubscriber
+@Log4j2
 public class FlandreBotInit {
     @Subscribe
     public void initBot(BotInitEvent event) {
@@ -24,14 +27,15 @@ public class FlandreBotInit {
         ScheduledTaskManager.init();
         K11PeopleNumberCommand.init();
 
-        Thread.startVirtualThread(() -> {
+        new Thread(() -> {
             try {
                 Thread.sleep(10000L);
             } catch (InterruptedException e) {
 
             }
             BotEventBus.post(new BotStopEvent());
-        });
+            log.info("Test 1");
+        }, "Test").start();
     }
 
     @Subscribe
@@ -43,5 +47,10 @@ public class FlandreBotInit {
     public void preSqlClose(SQLPreCloseEvent event) {
         K11PeopleNumberCommand.save();
         NicknameManager.save();
+        try {
+            Thread.sleep(1000L);
+        } catch (InterruptedException e) {
+
+        }
     }
 }
